# lifx

./: .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md
.github/workflows/: rust.yml
examples/dump_info/: Cargo.toml
examples/dump_info/src/: main.rs
examples/multizone_test/: Cargo.toml
examples/multizone_test/src/: main.rs
examples/waveform_test/: Cargo.toml
examples/waveform_test/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: message_roundtrip.rs
lifx/: Cargo.toml
lifx-core/: Cargo.toml
lifx-core/src/: lib.rs
lifx/src/: daemon.rs  lib.rs  main.rs  manager.rs
src/: lib.rs  manager.rs  monitor.rs  termmgr.rs  turn_off.rs
utils/get_all_info/: Cargo.toml
utils/get_all_info/src/: main.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
