[package]
name = "lifx-core"
version = "0.2.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
repository = "https://github.com/eminence/lifx"
description = "Low-level control of LIFX bulbs on your LAN"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[dependencies]
byteorder = "1.2.4"
failure = "0.1.2"
failure_derive = "0.1.2"
