[package]
name = "lifx-core"
version = "0.4.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
repository = "https://github.com/eminence/lifx"
description = "Low-level control of LIFX bulbs on your LAN"
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2018"

[dependencies]
byteorder = "1.2.4"
thiserror = "1.0"
arbitrary = { version = "1", optional = true, features = ["derive"] }
